recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:3: error: not found: value sqr
    var newLength = length/sqr(2)
                           ^